--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,15 @@
 * {
 margin: 0px;
 }
+
+@media(max-width: 768px){
+body{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  
+}
+}
 html body {
 width: 100%;  
 overflow-x: hidden;
@@ -22,7 +31,7 @@ h1 {
 .nav-bar {
   display: flex;
   gap: 60px;
-  margin: 0px 0px 0px 400px;
+  margin: 0px 0px 0px 200px;
   background: rgb(105, 45, 170);
   background: linear-gradient(
     90deg,
@@ -63,8 +72,8 @@ i {
 }
 @media(max-width: 768px){
   .sobre-mi{
- font-size: 1.7rem;
- text-align: center;
+ font-size: 1.5rem;
+
   }
 }
 .container-sobreMi {
@@ -87,6 +96,7 @@ justify-content: center;
 @media(max-width: 768px){
   .img-perfil{
   height: 200px;
+  padding-right: 120px;
   }
 }
 
