sumado certificado frontend

--- a/styles.css
+++ b/styles.css
@@ -32,14 +32,13 @@ h1 {
   display: flex;
   gap: 30px;
   margin: 0px 0px 0px 200px;
-  background: rgb(105, 45, 170);
+  background-color: wheat;
   background: linear-gradient(
     90deg,
-    rgba(105, 45, 170, 1) 45%,
-    rgba(179, 148, 241, 1) 100%
+    wheat 45%,
+    rgb(237, 237, 237) 100%
   );
   width: 1000px;
-  position: fixed;
   height: 90px;
 }
 @media(max-width: 768px){
@@ -131,10 +130,9 @@ justify-content: center;
   padding: 40px;
 }
 .certificados {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  display: grid;
+  grid-template-columns: repeat(2,1fr);
+  
 }
 @media(max-width: 768px){
   .certificados{
@@ -147,7 +145,7 @@ width: 800px;
 }
 .img-certificados {
   margin: 20px;
-  width: 40%;
+  width: 80%;
   animation-delay: 5s;
 }
 
