--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,7 @@ width: 100%;
 overflow-x: hidden;
 }
 body {
-  background-color: #b394f1;
+  background-color: #353535;
 }
 
 body header {
@@ -31,6 +31,7 @@ h1 {
 .nav-bar {
   display: flex;
   gap: 30px;
+  position: fixed;
   margin: 0px 0px 0px 200px;
   background-color: wheat;
   background: linear-gradient(
@@ -144,13 +145,12 @@ width: 800px;
   }
 }
 .img-certificados {
-  margin: 20px;
-  width: 80%;
-  animation-delay: 5s;
+  max-width: 640px;
+  margin: 10px;
 }
 
 .container-tecnologias i {
-  color: #2d134e;
+  color: #3c6e71;
 }
 .section-proyectos{
     scroll-margin-top: 15ex;
@@ -181,7 +181,17 @@ width: 800px;
 .container-proyectos a:hover{
     opacity: .4;
 }
-
+.container-text-proyectos{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.texto-proyectos{
+  border: solid 10px #d9d9d9;
+  border-radius: 30px;
+  padding: 30px;
+background-color:#284b63 ;
+}
 .imagenes-proyectos {
   width: 80%;
   height: 80%;
@@ -205,7 +215,7 @@ width: 800px;
 .section-contacto a {
   scroll-margin-top: 10ex;
   text-decoration: none;
-  color: #2d134e;
+  color: #3c6e71;
   font-size: 20px;
 
 }
